--- a/iloilo.html
+++ b/iloilo.html
@@ -190,7 +190,7 @@ padding:20px 0px;
 <p><font size="4">-Foods except Lunch at Isla Gigantes.</p>
 <p><font size="4">-Transpo from Iloilo Terminal to Carles and vice versa.</p>
 <p><h2>Sample Itinerary:</font></p></h2>
-<p><font size="5">Day 1 (City tour+South tour) 7am-Pick up at Iloilo Airport 8am-Check in hotel 830am-Start of City tour.</p>
+<p><font size="4">Day 1 (City tour+South tour) 7am-Pick up at Iloilo Airport 8am-Check in hotel 830am-Start of City tour.</p>
 
 
 <p><font size="4">1.Plaza Libertad.</p> 
@@ -203,10 +203,10 @@ padding:20px 0px;
 <p><font size="4">8.Iloilo Megaworld.</p> 
 <p><font size="4">9.Festive Walk.</p> 
 <p><font size="4">10.Iloilo Convention Center.</p>
-<p><font size="4">11.‎Atria Park.</p> 
-<p><font size="4">‎12.Plazuela.</p> 
+<p><font size="4">11.Atria Park.</p> 
+<p><font size="4">12.Plazuela.</p> 
 <p><font size="4">13.Iloilo Esplanade.</p> 
-<p><font size="4">14.‎Molo Church.</p> 
+<p><font size="4">14.Molo Church.</p> 
 <p><font size="4">15.Molo Mansion.</p> 
 <p><font size="4">16.Iloilo City Time Square.</p>
 
@@ -218,7 +218,7 @@ padding:20px 0px;
 (7pm -Dinner - at own expense) 
 (8pm -Back to Hotel)
 
-<p><font size="5">Day 2 (Isla de Gigantes).</p>
+<p><font size="4">Day 2 (Isla de Gigantes).</p>
 <p><font size="4">(3:30am - Rise and Shine) 
 <p><font size="4">(4am-Pick up at hotel to iloilo terminal).</p> 
 <p><font size="4">(8am-Arrival at Carles port).</p>
@@ -229,15 +229,15 @@ padding:20px 0px;
 <p><font size="4">(7:30pm-Pick up at Iloilo Terminal ).</p>
 <p><font size="4">(8pm-Back to hotel).</p> 
 <p><font size="4">Day 3 (Guimaras).</p> 
-<p><font size="4">(6am- rise and shine).</p>
+<p><font size="4">(6am-rise and shine).</p>
 <p><font size="4">(Check out Hotel).</p>
-<p><font size="4">(7am -Pick up at Hotel to Ortiz Wharf).</p> 
-<p><font size="4">(‎8am -Arrival at Jordan Guimaras to Raymens Beach Resort).</p> 
-<p><font size="4">(9am -Start of Island hopping).</p> 
-<p><font size="4">(12nn -End of Island hopping - ‎lunch at resort (at own expense).</p>
-‎<p><font size="4">(2pm -Start of Land tour/5 destinations).</p> 
-‎<p><font size="4">(5pm end of tour back to Jordan Wharf).</p> 
-<p><font size="4">(6pm arrival in Iloilo - ‎Drop off to Iloilo Airport).</p> 
+<p><font size="4">(7am-Pick up at Hotel to Ortiz Wharf).</p> 
+<p><font size="4">(8am-Arrival at Jordan Guimaras to Raymens Beach Resort).</p> 
+<p><font size="4">(9am-Start of Island hopping).</p> 
+<p><font size="4">(12nn-End of Island hopping-lunch at resort (at own expense).</p>
+<p><font size="4">(2pm-Start of Land tour/5 destinations).</p> 
+<p><font size="4">(5pm-end of tour back to Jordan Wharf).</p> 
+<p><font size="4">(6pm-arrival in Iloilo-Drop off to Iloilo Airport).</p> 
 
 
 
