--- a/iloilo.html
+++ b/iloilo.html
@@ -211,15 +211,15 @@ padding:20px 0px;
 <p><font size="4">16.Iloilo City Time Square.</p>
 
 <p><font size="4">(Lunch at PYT STOP (boodle Fight)-at own expense).</p>
-(1pm -Start of South tour) 
-(3pm-Garin Farm) 
-(4pm -Miag ao Church)
-(5pm -Camina Balay Na Bato) 
-(7pm -Dinner - at own expense) 
-(8pm -Back to Hotel)
+<p><font size="4">(1pm -Start of South tour).</p>
+<p><font size="4">(3pm-Garin Farm).</p>
+<p><font size="4">(4pm -Miag ao Church).</p>
+<p><font size="4">(5pm -Camina Balay Na Bato).</p> 
+<p><font size="4">(7pm -Dinner - at own expense).</p> 
+<p><font size="4">(8pm -Back to Hotel).</p>
 
 <p><font size="4">Day 2 (Isla de Gigantes).</p>
-<p><font size="4">(3:30am - Rise and Shine) 
+<p><font size="4">(3:30am - Rise and Shine).</p> 
 <p><font size="4">(4am-Pick up at hotel to iloilo terminal).</p> 
 <p><font size="4">(8am-Arrival at Carles port).</p>
 <p><font size="4">(Meet and greet with staff).</p>
