--- a/camihuin.html
+++ b/camihuin.html
@@ -131,9 +131,14 @@ padding:20px 0px;
      
       </ul>
 </li>
- <li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
+ <li><a href="https://graceairfare.github.io/mywebsite8.html"> TRANSIENT HOUSES</a>
     <ul>
-   <li><a href="https://graceairfare.github.io/mywebsite12.html"> INTERNATIONAL RATE</a>
+        <li><a href="https://graceairfare.github.io/baguio.html">BAGUIO</a></li>
+        <li><a href="https://graceairfare.github.io/laoag.html">LAOAG</a></li>
+        <li><a href="https://graceairfare.github.io/lipa.html">LIPA</a></li>
+        <li><a href="https://graceairfare.github.io/pangasinan.html">PANGASINAN</a></li>
+        <li><a href="https://graceairfare.github.io/tagaytay.html">TAGAYTAY</a></li>
+        <li><a href="https://graceairfare.github.io/vigan.html">VIGAN</a></li>
 	
     
       </ul>
@@ -155,11 +160,53 @@ padding:20px 0px;
 <br>
 <br>
 <br>
-
-
-
-
-
+<left>
+<ul><p><h2><font style="border:2px double;">CAMIGUIN 2 Days 1 Night JOINERS TOUR</font></p></h2>  
+<p><font size="4">PACKAGE @1900 per head for JAN TO APRIL 2018</p> 
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">1Night Hotel Accommodation (Own Private Room)</p> 
+<p><font size="4">-Breakfast</p> 
+<p><font size="4">-Lunch</p> 
+<p><font size="4">-Dinner</p> 
+<p><font size="4">-Roundtrip Transfer</p> 
+<p><font size="4">-Entrances</p> 
+<p><h2>(ITINERARY)</p></h2>
+<p><h2>Day 1:</p></h2>  
+Pick up from pier drop off hotel, Lunch and at 1 pm Start of tour</p> 
+<p><font size="4">*Walkway Station of the Cross</p> 
+<p><font size="4">*Sunken Cemetery Cross Maker</p> >
+<p><font size="4">*Old Church Ruin</p> 
+<p><font size="4">*Swimming in Tuasan Falls, Sto. Nino Cold Spring, Soda Water Pool and Hibok-hibok Hot Spring 7pm - Dinner Drop off Hotel</p> 
+<p><h2>Day 2:</p></h2>  
+<p><font size="4">5:30 to 7:30 am - White Island Hopping.</p>  
+<p><font size="4">8:00 to 10:30 am - Breakfast, Pasalubong Center, Pastel Origin, Picture taking CAMIGUIN and drop off hotel for check.</p> 
+<p><h2><font style="border:2px double;">CAMIGUIN 2 Days 1 Night JOINERS TOUR</font></p></h2>  
+<p><font size="4">PACKAGE @1500 per head for MAY 2018</p>  
+<p><h2>(INCLUSIONS)</p></h2>
+<p><font size="4">-1 Night Hotel Accommodation (Own Private Room)</p>  
+<p><font size="4">-Breakfast</p> 
+<p><font size="4">-Lunch</p>  
+<p><font size="4">-Dinner</p> 
+<p><font size="4">-Roundtrip Transfer</p> 
+<p><font size="4">-Entrances</p> 
+<p><h2>(ITINERARY)</p></h2>
+<p><font size="4">Day 1:</p>  
+<p><font size="4">Pick up from pier drop off hotel, Lunch and at 1 pm Start of tour.</p> 
+<p><font size="4">*Walkway Station of the Cross.</p> 
+<p><font size="4">*Sunken Cemetery Cross Maker.</p> 
+<p><font size="4">*Old Church Ruin.</p> 
+<p><font size="4">*Swimming in Tuasan Falls, Sto. Nino Cold Spring, Soda Water Pool and Hibok-hibok Hot Spring 7pm - Dinner Drop off Hotel.</p> 
+<p><font size="4">Day 2:</p>  
+<p><font size="4">5:30 to 7:30 am - White Island Hopping.</p>  
+<p><font size="4">8:00 to 10:30 am - Breakfast, Pasalubong Center, Pastel Origin, Picture taking CAMIGUIN and drop off hotel for check out.</p> 
+<p><h2>TERMS AND CONDITIONS:</p></h2> 
+<p><font size="4">*Airfare is not included in the package.</p>   
+<p><font size="4">*50% Down payment is required to secure the booking.</p>  
+<p><font size="4">*Remaining balance should be settled 7 days prior to client’s arrival.</p>   
+<p><font size="4">*Down payment is not refundable.</p>   
+<p><font size="4">*Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge.</p>  
+<p><font size="4">*Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>   
+<p><font size="4">*If client failed to arrive on your booking date, NO REFUND will be given.</p>  
 
 </ul>
 </ul>
