--- a/surigao.html
+++ b/surigao.html
@@ -133,7 +133,14 @@ padding:20px 0px;
 </li>
  <li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
     <ul>
-   <li><a href="https://graceairfare.github.io/mywebsite12.html"> INTERNATIONAL RATE</a>
+    <li><a href="https://graceairfare.github.io/batanes.html">BATANES</a></li>						     
+    <li><a href="https://graceairfare.github.io/boracay.html">BORACAY</a></li>
+    <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
+    <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
+    <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
+    <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
+    <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
+    <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
 	
     
       </ul>
@@ -155,12 +162,29 @@ padding:20px 0px;
 <br>
 <br>
 <br>
-
-
-
-
-
-
+<left>
+<ul><p><h2><font style="border:2px double;">SIARGAO  TOUR</font></p></h2>  
+<p><font size="4">*All in Package 3D2N P19,000 min. of 3pax.</p>  
+<p><font size="4">January to March 2018 Accommodation:</p>  
+<p><font size="4">*Siargao Bleu Resort & SPA Transfers/Resort/Breakfast/Resort Amenities.</p> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </ul>
 </ul>
 </left>
