--- a/batanes.html
+++ b/batanes.html
@@ -131,9 +131,17 @@ padding:20px 0px;
      
       </ul>
 </li>
- <li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
+ li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
     <ul>
-   <li><a href="https://graceairfare.github.io/mywebsite12.html"> INTERNATIONAL RATE</a>
+    <li><a href="https://graceairfare.github.io/batanes.html">BATANES</a></li>						     
+    <li><a href="https://graceairfare.github.io/boracay.html">BORACAY</a></li>
+    <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
+    <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
+    <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
+    <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
+    <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
+    <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
+	
 	
     
       </ul>
@@ -155,11 +163,51 @@ padding:20px 0px;
 <br>
 <br>
 <br>
+<left>
+<ul><p><h2><font style="border:2px double;">3D2N/4D3N BATANES TOUR PACKAGE</font></p></h2>
+<p><font size="4">-4,988/head (3D2N) (If 6 pax and up).</p>
+<p><font size="4">6,088/head (4D3N) (If 6 pax and up).</p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">-Round trip airport transfer.</p>
+<p><font size="4">-3D2N/4D3N Hotel accommodation at Dive Batanes Lodge (Aircon).</p>
+<p><font size="4">-Daily breakfast.</p>
+<p><font size="4">-Half Day Northern Tour with Lunch.</p>
 
+<p><font size="4">*Mt. Carmel Chapel</p> 
+<p><font size="4">*Radar Station (TUKON) Idjang Viewing</p> 
+<p><font size="4">*Japanese Hideout </p>
+<p><font size="4">*Boulders Beach Valugan </p>
+<p><font size="4">*Rolling Hills </p>
+<p><font size="4">*Naidii Hills </p>
+<p><font size="4">*Basco Cathedral </p>
+<p><font size="4">*BASCO Light House</p>
+<p><h2>OPTIONAL TOURS ARE NET:</font></p></h2>
 
+<p><font size="4">-One(1) day Southern Tour with Lunch - 2000/head</p>
+<p><font size="4">*Chawa View Deck </p>
+<p><font size="4">*Mahatao Pier/Houses </p>
+<p><font size="4">*Mahatao Church </p>
+<p><font size="4">*Mahatao Old Light House </p>
+<p><font size="4">*Malboro Country </p>
+<p><font size="4">*Imnajbu Old Naval </p>
+<p><font size="4">*Loran Station </p>
+<p><font size="4">*Ghost Town </p>
+<p><font size="4">*Alapad Rock Formation </p>
+<p><font size="4">*Honesty Store </p>
+<p><font size="4">*Uyugan Church </p>
+<p><font size="4">*Ivana Church Old House (DAKAYS) </p>
+<p><font size="4">*Old Existing Spanish Bridge</p>
 
-
-
+<p><font size="4">-Sabtang Island Tour (Travel to other Island) With Lunch -  2400/head</p>
+<p><font size="4">*San Vicente Ferrer Church </p>
+<p><font size="4">*Savidug Stone Houses </p>
+<p><font size="4">*Sto. Tomas De Aquinas Chapel </p>
+<p><font size="4">*Savidug Fortress </p>
+<p><font size="4">*Tinyan View Point </p>
+<p><font size="4">*Beautiful Place of Chavayan, Sta. Rosa De Lima Chapel </p>
+<p><font size="4">*Sabtang Weavers </p>
+<p><font size="4">*Morong Beach Nakabuang Cave</p>
+<p><font size="4">*Mayahaw (Ahaw Ark)</p>
 
 </ul>
 </ul>
