--- a/camihuin.html
+++ b/camihuin.html
@@ -173,13 +173,13 @@ padding:20px 0px;
 <p><font size="4">-Roundtrip Transfer</p> 
 <p><font size="4">-Entrances</p> 
 <p><h2>(ITINERARY)</p></h2>
-<p><h2>Day 1:</p></h2>  
+<p><font size="4">Day 1:</p>
 Pick up from pier drop off hotel, Lunch and at 1 pm Start of tour</p> 
 <p><font size="4">*Walkway Station of the Cross</p> 
 <p><font size="4">*Sunken Cemetery Cross Maker</p> >
 <p><font size="4">*Old Church Ruin</p> 
 <p><font size="4">*Swimming in Tuasan Falls, Sto. Nino Cold Spring, Soda Water Pool and Hibok-hibok Hot Spring 7pm - Dinner Drop off Hotel</p> 
-<p><h2>Day 2:</p></h2>  
+<p><font size="4">Day 2:</p>
 <p><font size="4">5:30 to 7:30 am - White Island Hopping.</p>  
 <p><font size="4">8:00 to 10:30 am - Breakfast, Pasalubong Center, Pastel Origin, Picture taking CAMIGUIN and drop off hotel for check.</p> 
 <p><h2><font style="border:2px double;">CAMIGUIN 2 Days 1 Night JOINERS TOUR</font></p></h2>  
