--- a/palawan.html
+++ b/palawan.html
@@ -131,9 +131,17 @@ padding:20px 0px;
      
       </ul>
 </li>
- <li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
+li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
     <ul>
-   <li><a href="https://graceairfare.github.io/mywebsite12.html"> INTERNATIONAL RATE</a>
+    <li><a href="https://graceairfare.github.io/batanes.html">BATANES</a></li>						     
+    <li><a href="https://graceairfare.github.io/boracay.html">BORACAY</a></li>
+    <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
+    <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
+    <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
+    <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
+    <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
+    <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
+	
 	
     
       </ul>
@@ -261,6 +269,55 @@ padding:20px 0px;
 <p><font size="4">-Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge.</p>
 <p><font size="4">-Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
 <p><font size="4">-If client failed to arrive on your booking date, NO REFUND will be given.</p>
+<p><h1><font style="border:2px double;">7D6N PPS+ EL NIDO+ CORON COMBO PACKAGE</font></p></h1>
+<p><h2>Option A Budget:</font></p></h2>
+<p><font size="4">-Accomodation in PPS: Gracia Budget Inn or Similar class.</p>
+<p><font size="4">-Accomodation in EL Nido : Arkitel Bed and Breakfast or Similar class.</p>
+<p><font size="4">-Accomodation in Coron : Apartelle De Gabrielle or Similar class.</p>
+<p><font size="4">-(7days-6nights)</p>
+<p><font size="4">(Rate: PHP 14,350person)</p>
+<p><h2>Option B Midrange:</font></p></h2> 
+<p><font size="4">-Accomodation in PPS: Balay Inato or Similar class
+<p><font size="4">-Accomodation in EL Nido : Abad's Place or Similar class
+<p><font size="4">-Accomodation in Coron : Balaibinda Lodge or Similar class
+<p><font size="4">(7days-6nights Nett Rate:PHP15,850person)</p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">-Airconditioned accommodation.</p>
+<p><font size="4">-Roundtrip airport transfer.</p>
+<p><font size="4">-Puerto-el nido-Puerto shared van transfers.</p>
+<p><font size="4">-Daily Breakfast.</p>
+<p><h2>TOURS(JOINERS)</font></p></h2>
+<p><font size="4">1.Underground River Tour with buffet lunch.</p>
+<p><font size="4">2.El Nido Island Hopping Tour A with picnic lunch.</p> 
+<p><font size="4">3.El Nido Island Hopping Tour C with picnic lunch.</p> 
+<p><font size="4">4.Coron Island hopping Tour A with picnic lunch.</p>
+<p><h2>TOUR INCLUSIONS:</font></p></h2>
+<p><font size="4">-All island fees.</p> 
+<p><font size="4">-All entrance fee.</p>
+<p><font size="4">-Environmental Fee.</p>
+<p><font size="4">-All permit fees.</p>
+<p><font size="4">-All environmental fees.</p> 
+<p><font size="4">-All boat transfers.</p>
+<p><font size="4">-Quality swimming life vest.</p>
+<p><font size="4">-Free use of snorkels and masks(EL Nido and Coron).</p>
+<p><font size="4">-Free use of beach towels(EL Nido and Coron).</p>
+<p><font size="4">-Services of tour guides.</p>
+<p><h2>TOUR ITINERARY:</font></p></h2>
+<p><font size="4">Day 1 Arrival, Airport Pickup, check-in.</p>
+<p><font size="4">Day 2 Underground River tour(7am-3pm), Travel to El Nido(6pm to 11:30pm).</p>
+<p><font size="4">Day 3 Island Tour A with Lunch(9am-4pm).</p>
+<p><font size="4">Day 4 Island Tour C with Lunch (9am-4pm).</p>
+<p><font size="4">Day 5 Ferry to Coron (6am to 10pm), 4pm Town tour.</p>
+<p><font size="4">Day 6 Coron Island Hopping Tour A with picnic Lunch (9am to 4pm).</p>
+<p><font size="4">Day 7 Airport transfer 2 hours prior to departure.</p>
+<p><h2>CONDITIONS FOR FERRY TRANSFERS (PLEASE EXPLAIN THIS TO YOUR GUESTS)<p><h2>
+
+<p><font size="4">1.Tickets of the Montenegro fast craft are sold to us (agencies) a day before the voyage as per Ferry policy. In the event, 06:00am is fully booked, 08:00am regular ferry will be the replacement voyage. Guests will be informed a day before the departure. Php250/person refund shall be given to guests directly in case Montenegro is fully booked.</p>
+<p><font size="4">2.Ferry Ticket will be handed over to guests by our staff in El Nido a day before the scheduled voyage. Please take care of it. Once guests lose it, they will be required to purchase a new one (ferry policy).</p>
+<p><font size="4">3.Guests must be at Port 1 hour prior to departure for check-in and security checks. Prepare valid identification and ferry tickets.</p>
+<p><font size="4">4.In case of cancellation brought about by bad weather and as declared by coast guard, full refund of the value of the ticket will be given to the guests/agency. In case guests prefer to re-book the following day, our staff will process the rebooking (free of charge) of the new ferry tickets subject to available slots and weather conditions.</p>
+<p><font size="4">5.OUR AGENCY is NOT in anyway be liable for any misconnection or missed airline flight/s and forfeited bookings and tours between PuertoEl Nido-Coron trips brought about cancellation of Ferry Trips caused by unfavorable weather and shall NOT be held accountable to reimburse or compensate guests/agency as this is beyond our control (force majeure). However, we will do our best to assist guests for their alternative plan. Guests MUST have their air travel insurance for this case covering this scenario.</p>
+<p><font size="4">6.By sending your payment, guests and agencies are bound by these terms and conditions.
 
 </ul>
 </ul>
