--- a/panglao island.html
+++ b/panglao island.html
@@ -131,9 +131,17 @@ padding:20px 0px;
      
       </ul>
 </li>
- <li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
+li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
     <ul>
-   <li><a href="https://graceairfare.github.io/mywebsite12.html"> INTERNATIONAL RATE</a>
+    <li><a href="https://graceairfare.github.io/batanes.html">BATANES</a></li>						     
+    <li><a href="https://graceairfare.github.io/boracay.html">BORACAY</a></li>
+    <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
+    <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
+    <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
+    <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
+    <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
+    <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
+	
 	
     
       </ul>
@@ -155,10 +163,114 @@ padding:20px 0px;
 <br>
 <br>
 <br>
+<left>
+<ul><p><h2><font style="border:2px double;">PANGLAO ISLAND LAND TOUR</font></p></h2>
+<p><font size="4">*2 pax Php 1,300/pax</p>
+<p><font size="4">*3 pax Php 1,200/pax</p>
+<p><font size="4">*4 pax Php 1050/pax </p>
+<p><font size="4">*5 pax Php 960/pax</p>
+<p><font size="4">*6 pax Php 900/pax</p>
+<p><font size="4">*7 pax Php 920/pax</p>
+<p><font size="4">*8 pax Php 875/pax</p>
+<p><font size="4">*9 pax Php 870/pax </p>
+<p><font size="4">*10 pax Php 850/pax </p>
+<p><font size="4">*11 pax above kindly drop us an email or send us private message for quotation.</p>
+<p><h2>(ITINERARY)</font></p></h2>
+<p><font size="4">*Tour Start: 8am – 9am (4hrs Duration).</p>
+<p><font size="4">*Pick up Hotel and proceed to tour.</p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">*Air-Conditioned Transport with Fuel.</p>
+<p><font size="4">*Licensed Tour Driver.</p>
+<p><font size="4">*All Entrance and Parking Fee.</p>
+<p><h2>PLACES TO VISIT:</font></p></h2>
+<p><font size="4">*Dauis Church & Wishing Well.</p>
+<p><font size="4">*St. Agustin Church | Panglao Watch Tower.</p>
+<p><font size="4">*Hinagdanan Cave(Optional : Swimming 75 per pax).</p>
+<p><font size="4">*Bohol Bee Farm ( Lunch, Guest Expense).</p>
+<p><font size="4">*Nova Shell Museum.</p>
+<p><font size="4">-END OF TOUR BACK TO HOTEL OR TRANSFER TO AIRPORT/SEAPORT.</p>
+<p><h2>TERMS and CONDITIONS:</font></p></h2>
+<p><font size="4">*GRACE TRAVEL & TOURS SERVICES will not give a Confirmed Booking until the required Booking Fee / Downpayment has been received. Priority will always be given to Client or Guest who have paid the requested deposit.</p>
+<p><font size="4">*Required to Deposit at least 30% to our Bank account is to secure Land arrangement package. Balance should be settle 2 days before the tour.</p>
+<p><font size="4">*No Cancellation of Booking once you confirmed.</p>
+<p><font size="4">*Rates may vary if pick up & drop off point is outside Tagbilaran City and Panglao Area.</p>
+<p><font size="4">*Any amendment/Cancellation after reservation is subject to penalty/full charges.</p>
+<p><font size="4">*LN Travel and Tour does not assume responsibility for those inherent risks which may cause unfortunate accidents or incidents during ordinary travel conditions. We will not be held responsible for injury, death, damage, loss, delay, cost, expense, or inconvenience arising from travel misfortunes beyond our control.</p>
+<p><h2><font style="border:2px double;">3 DAYS AND 2 NIGHTS AT PANGLAO ALONA LEUX HOTEL</font></p></h2> 
+<p><h2>INCLUSION OF PACKAGES:</font></p></h2>
+<p><font size="4">*Bohol Countryside.</p> 
+<p><font size="4">*All Entrance Fee, Daily Breakfast.</p> 
+<p><font size="4">*Air Conditioned Transportation (Private Tour).</p> 
+<p><font size="4">*Lunch Buffet at River Cruise Floating Resto.</p>
+<p><font size="4">*RoundTrip Transfer from Airport or Pier to Hotel.</p> 
+<p><h2>ITINERARY:</font></p></h2> 
+<p><font size="4">1st Day: (BOHOL COUNTRYSIDE TOUR)</p>
+<p><font size="4">1. Blood Compact Shrine.</p>
+<p><font size="4">2. Baclayon Oldest Church.</p>
+<p><font size="4">3. The Biggest Python.</p> 
+<p><font size="4">4. River Cruise Floating Resto.</p> 
+<p><font size="4">5. St. Peter's Ruins Church.</p>
+<p><font size="4">6. EcoTourism Adventure Park.</p> 
+<p><font size="4">7. The Tarsier Sanctuary.</p> 
+<p><font size="4">8. Bilar Manmade Forest.</p> 
+<p><font size="4">9. The Butterfly Garden.</p> 
+<p><font size="4">10. The Chocolate Hills.</p>
+<p><h2>ITINERARY:</font></p></h2>
+ <p><h2>2nd Day: PANGLAO ISLAND TOUR:</font></p></h2> 
+<p><font size="4">1. Hinagdanan Cave.</p> 
+<p><font size="4">2. Dauis Church Shrine.</p> 
+<p><font size="4">3. The Caffe Lawis.</p> 
+<p><font size="4">4. Bohol Bee Farm.</p> 
+<p><font size="4">5. Alona White Beach.</p>
+<p><font size="4">6. Sea Shell Museum.</p> 
+<p><font size="4">7. San Agustin Church.</p> 
+<p><font size="4">8. The Panglao Tower.</p> 
 
-
-
-
+<p><h2>3rd Day:</font></p></h2>  
+<p><font size="4">1.Free Day (Morning)</p>  
+<p><font size="4">2.Check Out Time (12Noon)</p>  
+<p><h2>PACKAGE RATES:</font></p></h2>   
+<p><font size="4">(2 Persons - P7,699 Per Pax.)</p> 
+<p><font size="4">(3 Persons - P7,199 Per Pax.)</p>  
+<p><font size="4">(4 Persons - P6,699 Per Pax.)</p>  
+<p><font size="4">(5 Persons - P6,199 Per Pax.)</p> 
+<p><font size="4">(6 Persons - P5,699Per Pax.)</p>  
+<p><font size="4">(7 Persons - P5,199 Per Pax.)</p>  
+<p><font size="4">(8 Persons - P4,699 Per Pax.)</p>  
+<p><font size="4">(9 Persons - P4,199Per Pax.)</p>  
+<p><font size="4">(10 Above - P3,7,99Per Pax.)</p> 
+<p><font size="4">(Panglao Island Land/Day Tour)</p> 
+<p><font size="4">(2 pax Php 1,300/pax.)</p>  
+<p><font size="4">(3 pax Php 1,200/pax.)</p>  
+<p><font size="4">(4 pax Php 1050/pax.)</p> 
+<p><font size="4">(5 pax Php 960/pax.)</p> 
+<p><font size="4">(6pax Php 900/pax.)</p> 
+<p><font size="4">(7 pax Php 920/pax.)</p>  
+<p><font size="4">(8 pax Php 875/pax.)</p> 
+<p><font size="4">(9 pax Php 870/pax.)</p>
+<p><font size="4">(10 pax Php 850/pax.)</p>  
+<p><font size="4">(11 pax above kindly drop us an email or send us private message for quotation)</p> 
+<p><h2>ITINERARY:</font></p></h2>   
+<p><font size="4">Tour Start: 8am – 9am (4hrs Duration)</p>   
+<p><font size="4">Pick up Hotel and proceed to tour.</p>   
+<p><h2>INCLUSIONS:</font></p></h2>  
+<p><font size="4">-Air-Conditioned Transport with Fuel.</p>   
+<p><font size="4">-Licensed Tour Driver.</p>    
+<p><font size="4">-All Entrance and Parking Fee.</p>    
+<p><h2>Place to Visit:</font></p></h2>  
+<p><font size="4">-Dauis Church & Wishing Well.</p>     
+<p><font size="4">-St. Agustin Church | Panglao Watch Tower.</p>     
+<p><font size="4">-Hinagdanan Cave(Optional : Swimming 75 per pax).</p>     
+<p><font size="4">-Bohol Bee Farm ( Lunch, Guest Expense).</p>    
+<p><font size="4">-Nova Shell Museum.</p>     
+<p><h2>END OF TOUR BACK TO HOTEL OR TRANSFER TO AIRPORT/SEAPORT</font></p></h2>  
+<p><h2>TERMS AND CONDITIONS APPLY:</font></p></h2>   
+<p><font size="4">GRACE TRAVEL & TOURS SERVICES will not give a Confirmed Booking until the required Booking Fee / Downpayment has been received. Priority will always be given to Client or Guest who have paid the requested deposit.</p> 
+<p><font size="4">-Required to Deposit at least 50% to our Bank account is to secure Land arrangement package. Balance should be settle 2 days before the tour.</p> 
+<p><font size="4">-No Cancellation of Booking once you confirmed.</p>  
+<p><font size="4">-Rates may vary if pick up & drop off point is outside Tagbilaran City and Panglao Area.</p> 
+<p><font size="4">-Any amendment/Cancellation after reservation is subject to penalty/full charges.
+<p><font size="4">-Grace Travel and Tour Services does not assume responsibility for those inherent risks which may cause unfortunate accidents or incidents during ordinary travel conditions. We will not be held responsible for injury, death, damage, loss, delay, cost, expense, or inconvenience arising from travel misfortunes beyond our control.
 
 
 </ul>
