--- a/batanes.html
+++ b/batanes.html
@@ -161,6 +161,7 @@ padding:20px 0px;
 <br>
 <left>
 <ul><p><h2><font style="border:2px double;">3D2N/4D3N BATANES TOUR PACKAGE</font></p></h2>
+	<img style="border:5px double black;" src="AIR/pic/nes.jpg" width=" 700px"height="500px"align="right">
 <p><font size="4">4,988/head (3D2N) (If 6 pax and up).</p>
 <p><font size="4">6,088/head (4D3N) (If 6 pax and up).</p>
 <p><h2>(INCLUSIONS)</font></p></h2>
@@ -181,6 +182,7 @@ padding:20px 0px;
 
 <p><font size="4">-One(1) day Southern Tour with Lunch - 2000/head</p>
 <p><font size="4">*Chawa View Deck </p>
+	<img style="border:5px double black;" src="AIR/pic/nes2.jpg" width=" 700px"height="500px"align="right">
 <p><font size="4">*Mahatao Pier/Houses </p>
 <p><font size="4">*Mahatao Church </p>
 <p><font size="4">*Mahatao Old Light House </p>
