--- a/boracay.html
+++ b/boracay.html
@@ -162,6 +162,7 @@ padding:20px 0px;
 <left>
 <ul><p><h2><font style="border:2px double;">BORACAY TOUR PACKAGES</font></p></h2>
 <p><font size="4">Effective date: January 4 - May 31, 2018 Please read carefully the Terms and Conditions:</p>
+	<img style="border:5px double black;" src="AIR/pic/cay.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">Standard Check in time: 2:00pm.</p>
 <p><font size="4">Standard Check Out time: 12:00nn.</p>
 <p><font size="4">-All package price is inclusive of Service Charge already. No more additional Fees/ No hidden charges. </p>
@@ -204,6 +205,7 @@ padding:20px 0px;
 <p><font size="4">-Remittance: Cebuana, Palawan, LBC, etc.</p>
 <p><font size="4">-Payments will be acknowledged once I received pictures of proof of remittance or Bank fund transfer sent through messenger or email.</p>
 <p><font size="4">-Service Voucher will be provided once booking is confirmed Accommodation Address: Carmenia Residence Bulabog Street Along Bloomfield Road, Zone 5 Station 2, Boracay, Island, Phils.</p>
+<img style="border:5px double black;" src="AIR/pic/cay.jpg" width=" 500px"height="400px"align="right">
 <p><h2>WE OFFER THE FOLLOWING METHODS:</font></p></h2>
 <p><font size="4">1.	(ACCOMMODATION ONLY)</p>
 <p><h2>(INCLUSIONS)</font></p></h2>
