--- a/camihuin.html
+++ b/camihuin.html
@@ -163,7 +163,8 @@ padding:20px 0px;
 <br>
 <br>
 <left>
-<ul><p><h2><font style="border:2px double;">CAMIGUIN 2 Days 1 Night JOINERS TOUR</font></p></h2>  
+<ul><p><h2><font style="border:2px double;">CAMIGUIN 2 Days 1 Night JOINERS TOUR</font></p></h2>
+	<img style="border:5px double black;" src="AIR/pic/uin.jpg" width=" 650px"height="500px"align="right">
 <p><font size="4">PACKAGE @1900 per head for JAN TO APRIL 2018</p> 
 <p><h2>(INCLUSIONS)</font></p></h2>
 <p><font size="4">1Night Hotel Accommodation (Own Private Room)</p> 
@@ -183,6 +184,7 @@ Pick up from pier drop off hotel, Lunch and at 1 pm Start of tour</p>
 <p><font size="4">5:30 to 7:30 am - White Island Hopping.</p>  
 <p><font size="4">8:00 to 10:30 am - Breakfast, Pasalubong Center, Pastel Origin, Picture taking CAMIGUIN and drop off hotel for check.</p> 
 <p><h2><font style="border:2px double;">CAMIGUIN 2 Days 1 Night JOINERS TOUR</font></p></h2>  
+<img style="border:5px double black;" src="AIR/pic/uin1.jpg" width=" 650px"height="500px"align="right">
 <p><font size="4">PACKAGE @1500 per head for MAY 2018</p>  
 <p><h2>(INCLUSIONS)</p></h2>
 <p><font size="4">-1 Night Hotel Accommodation (Own Private Room)</p>  
