--- a/panglao island.html
+++ b/panglao island.html
@@ -164,6 +164,7 @@ padding:20px 0px;
 <br>
 <left>
 <ul><p><h2><font style="border:2px double;">PANGLAO ISLAND LAND TOUR</font></p></h2>
+	<img style="border:5px double black;" src="AIR/pic/nap3.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">*2 pax Php 1,300/pax</p>
 <p><font size="4">*3 pax Php 1,200/pax</p>
 <p><font size="4">*4 pax Php 1050/pax </p>
@@ -180,6 +181,7 @@ padding:20px 0px;
 <p><h2>(INCLUSIONS)</font></p></h2>
 <p><font size="4">*Air-Conditioned Transport with Fuel.</p>
 <p><font size="4">*Licensed Tour Driver.</p>
+	<img style="border:5px double black;" src="AIR/pic/nap2.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">*All Entrance and Parking Fee.</p>
 <p><h2>PLACES TO VISIT:</font></p></h2>
 <p><font size="4">*Dauis Church & Wishing Well.</p>
@@ -202,6 +204,7 @@ padding:20px 0px;
 <p><font size="4">*Air Conditioned Transportation (Private Tour).</p> 
 <p><font size="4">*Lunch Buffet at River Cruise Floating Resto.</p>
 <p><font size="4">*RoundTrip Transfer from Airport or Pier to Hotel.</p> 
+	<img style="border:5px double black;" src="AIR/pic/nap.jpg" width=" 800px"height="500px"align="right">
 <p><h2>ITINERARY:</font></p></h2> 
 <p><font size="4">1st Day: (BOHOL COUNTRYSIDE TOUR)</p>
 <p><font size="4">1. Blood Compact Shrine.</p>
@@ -224,7 +227,7 @@ padding:20px 0px;
 <p><font size="4">6. Sea Shell Museum.</p> 
 <p><font size="4">7. San Agustin Church.</p> 
 <p><font size="4">8. The Panglao Tower.</p> 
-
+<img style="border:5px double black;" src="AIR/pic/nap1.jpg" width=" 800px"height="500px"align="right">
 <p><h2>3rd Day:</font></p></h2>  
 <p><font size="4">1.Free Day (Morning)</p>  
 <p><font size="4">2.Check Out Time (12Noon)</p>  
