--- a/surigao.html
+++ b/surigao.html
@@ -167,24 +167,14 @@ padding:20px 0px;
 <p><font size="4">*All in Package 3D2N P19,000 min. of 3pax.</p>  
 <p><font size="4">January to March 2018 Accommodation:</p>  
 <p><font size="4">*Siargao Bleu Resort & SPA Transfers/Resort/Breakfast/Resort Amenities.</p> 
+	<img style="border:5px double black;" src="AIR/pic/oag.jpg" width=" 600px"height="500px">
+        <img style="border:5px double black;" src="AIR/pic/oag1.jpg" width=" 600px"height="500px">
 <br>
 <br>
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 </ul>
 </ul>
 </left>
