--- a/cebu.html
+++ b/cebu.html
@@ -163,7 +163,7 @@ padding:20px 0px;
 <br>
 <br>
 <ul><p><h2><font style="border:2px double;">4D3N CEBU TOUR PACKAGE</font></p></h2>
-<img style="border:5px double black;" src="AIR/pic/ceb.jpg" width=" 550px"height="370px"align="right">
+<img style="border:5px double black;" src="pic/ceb.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">-5688/head (If 4 pax).</p>
 <p><h2>(INCLUSIONS)</font></p></h2>
 <p><font size="4">-Round trip airport transfer.</p>
@@ -183,7 +183,7 @@ padding:20px 0px;
 <p><font size="4">DAY 3: Pick up at 4AM then travel to Oslob for 2 to 3 hrs.</p>
 <p><font size="4">-Breakfast (Included).</p>
 <p><font size="4">-Whale Shark Encounter from 7:30AM to 8AM (30 minutes allotted time).</p>
-	<img style="border:5px double black;" src="AIR/pic/ceb1.jpg" width=" 550px"height="370px"align="right">
+	<img style="border:5px double black;" src="pic/ceb1.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">-Travel to Kawasan falls and stay until 12:30PM.</p>
 <p><font size="4">-LUNCH (FREE).</p>
 <p><font size="4">-Travel to Moalboal for 30 minutes.</p>
