--- a/iloilo.html
+++ b/iloilo.html
@@ -166,7 +166,7 @@ padding:20px 0px;
 
 <ul><ul><p><h2><font style="border:2px double;">3 days 2 nights ILOILO CITY OF LOVE TOUR</font></p></h2> 
 <p><font size="4">(PACKAGE with City Tours/Isla Gigantes & Guimaras Hotel: Ongbun Hotel)</p> 
-	<img style="border:5px double black;" src="AIR/pic/oli.jpg" width=" 550px"height="370px"align="right">
+	<img style="border:5px double black;" src="pic/oli.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">(2 pax-8,300/pax).</p>
 <p><font size="4">(3 pax-7,099/pax).</p> 
 <p><font size="4">(4 pax-6,099/pax).</p> 
@@ -192,7 +192,7 @@ padding:20px 0px;
 <p><font size="4">-Transpo from Iloilo Terminal to Carles and vice versa.</p>
 <p><h2>Sample Itinerary:</font></p></h2>
 <p><font size="4">Day 1 (City tour+South tour) 7am-Pick up at Iloilo Airport 8am-Check in hotel 830am-Start of City tour.</p>
-<img style="border:5px double black;" src="AIR/pic/oli1.jpg" width=" 550px"height="370px"align="right">
+<img style="border:5px double black;" src="pic/oli1.jpg" width=" 550px"height="370px"align="right">
 
 <p><font size="4">1.Plaza Libertad.</p> 
 <p><font size="4">2.City Gallery.</p>
@@ -220,7 +220,7 @@ padding:20px 0px;
 <p><font size="4">(8pm -Back to Hotel).</p>
 
 <p><font size="4">Day 2 (Isla de Gigantes).</p>
-	<img style="border:5px double black;" src="AIR/pic/oli2.jpg" width=" 550px"height="370px"align="right">
+	<img style="border:5px double black;" src="pic/oli2.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">(3:30am - Rise and Shine).</p> 
 <p><font size="4">(4am-Pick up at hotel to iloilo terminal).</p> 
 <p><font size="4">(8am-Arrival at Carles port).</p>
