--- a/palawan.html
+++ b/palawan.html
@@ -138,6 +138,7 @@ li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
     <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
     <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
     <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
+    <li><a href="https://graceairfare.github.io/palawan.html">PALAWAN</a></li>						    
     <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
     <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
     <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
@@ -164,7 +165,7 @@ li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
 <br>
 <br>
 <ul><p><h1><font style="border:2px double;">3 DAYS 2NIGHTS PUERTO PRINCESA TOUR PACKAGE </font></p></h1>
-<img style="border:5px double black;" src="AIR/pic/naw.jpg" width=" 550px"height="370px"align="right">
+<img style="border:5px double black;" src="pic/naw.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">-Boat and Sightseeing Activities</p>
 <p><font size="4">-Minimum of 2 Persons.</p>
 <p><font size="4">-4,500php/pax.</p>
@@ -206,7 +207,7 @@ li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
 <p><font size="4">-Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
 <p><font size="4">-If client failed to arrive on your booking date, NO REFUND will be given.</p>
 <p><h2><font style="border:2px double;">3 DAYS 2NIGHTS PUERTO PRINCESA TOUR PACKAGE </font></p></h2>
-<img style="border:5px double black;" src="AIR/pic/naw1.jpg" width=" 550px"height="370px"align="right">
+<img style="border:5px double black;" src="pic/naw1.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">-Swimming and Snorkeling activities.</p>
 <p><font size="4">-Minimum of 2 persons.</p>
 <p><font size="4">-4,500php/pax.</p>
