--- a/mywebsite11.html
+++ b/mywebsite11.html
@@ -136,7 +136,7 @@ padding:20px 0px;
     <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
     <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
     <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
-    <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
+    <li><a href="https://graceairfare.github.io/palawan.html">PALAWAN</a></li>
     <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
     <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
 	
