--- a/palawan.html
+++ b/palawan.html
@@ -241,7 +241,7 @@ li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
 <p><font size="4">*Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
 <p><font size="4">*If client failed to arrive on your booking date, NO REFUND will be given.</p>
 <p><h2><font style="border:2px double;">3 DAYS 2 NIGHTS CORON TOUR PACKAGE</font></p></h2>
-<img style="border:5px double black;" src="AIR/pic/naw2.jpg" width=" 550px"height="370px"align="right">
+<img style="border:5px double black;" src="pic/naw2.jpg" width=" 550px"height="370px"align="right">
 <p><font size="4">*Swimming and Snorkeling.</p>
 <p><font size="4">*Minimum of 2 persons.</p>
 <p><font size="4">*4,500php/pax.</p>
