--- a/cambodia.html
+++ b/cambodia.html
@@ -165,6 +165,7 @@ padding:20px 0px;
 <br>
 <left>
 <ul><p><h2><font style="border:2px double;">3D2N SIEM REAP PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
+	<img style="border:5px double black;" src="pic/kor.jpg" width=" 600px"height="500px"align="right">
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</p>
 <p><font size="4">*Angkor Vattanakpheap (3 star) P7999/per pax.</p>
 <p><font size="4">*Cheathata Angkor / New Riverside Hotel (3 star) P8899.</p>
