--- a/china.html
+++ b/china.html
@@ -171,6 +171,7 @@ padding:20px 0px;
 <p><font size="4">*HOLIDAY INN DOWN TOWN HOTEL Downtown (4 star) P17100/per.</p>
 <p><font size="4">*CROWN PLAZA WANGFUJING At Wangfujing Street (5 star) P18100/per pax.</p>
 <p><h2>(INCLUSIONS)</font></p></h2></left>
+<img style="border:5px double black;" src="AIR/pic/jin.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">*3 Nights Hotel Accommodation with Breakfast.</p>
 <p><font size="4">*Round trip to Airport to Hotel Transfer.</p>
 <p><font size="4">*Compulsory City tour .</p>
