--- a/hongkong.html
+++ b/hongkong.html
@@ -167,6 +167,7 @@ padding:20px 0px;
 <left>
 <ul><p><h2><font style="border:2px double;">3d2N HONG KONG PACKAGE(HOTEL + TRANSFERS + TOUR)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays.)</p>
+	<img style="border:5px double black;" src="pic/dis.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">Note: Can only choose 1 PM Tour only (Disney / Ocean Park / PM MACAU)</p>
 <p><font size="4">*Rambler Garden (3star)With Disneyland/Ocean Park/Macau Tour Packeges P16200/per pax.</p>
 <p><font size="4">*Rambler Garden (3star)With Disneyland P9100/per pax.</p>
