--- a/indonesia.html
+++ b/indonesia.html
@@ -169,6 +169,7 @@ padding:20px 0px;
 <p><font size="4">*Maxone Seminyak Hotel/Siesta Legian Hotel/Solaris Hotel 3 Star P6,699/per pax.</P>
 <p><font size="4">*Honeymoon Package (1 BR Pool Villa) – 1 candlelight dinner with wine, couples massage, free access to Canggu Club, Free Shuttle Service to beach 4 Star Hotel P15,200/per pax.</P>
 <p><h2>(INCLUSIONS)</font></p></h2>
+<img style="border:5px double black;" src="pic/sem.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">*3D2N Hotel Accommodation with daily breakfast.</P>
 <p><font size="4">*R/T Airport transfers (8:00am-10:00pm)</P>
 <p><font size="4">*Services of English Speaking Driver and Tour guide Half Day Denpasar City Tour A half-day tour around Bali will take you to places that will enlighten and educate you on the Balinese culture. It will cover attractions such as the villages, forests, the different temples & shrines, and many more.</P>
