--- a/japan.html
+++ b/japan.html
@@ -166,6 +166,7 @@ padding:20px 0px;
 <left>
 <ul><p><h1><font style="border:2px double;">4D3N TOKYO PACKAGE (HOTEL + 1 way TRANSFER)</font></p></h1>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Mar 21-Apr 15, 2018 and Holidays).</p>
+	<img style="border:5px double black;" src="pic/kot.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">Note: Minimum of 4 persons per booking.</p>
 <p><font size="4">*Hotel Hoshi Kaikan (no breakfast) Budget.</p>
 <p><font size="4">*APA Hotel TKP Uen (3-star) P27299/per pax.</p>
@@ -184,6 +185,7 @@ padding:20px 0px;
 <p><font size="4">Inclusions: Mt Fuji 5th station, Lunch, Lake Ashi Cruise and Mt Komagatake Ropeway. Add P2,000 for Bullet Train return</p>
 <p><font size="4">Day 3: Breakfast, Dynamic Tokyo Tour with Tokyo Tower (8:30am-5:30pm) – Meeting Point is Hamamatsucho Bus Terminal.</p>
 <p><font size="4">Inclusions: Tokyo Tower Viewing Deck, Tea Ceremony, Lunch, Imperial Palace Plaza, Nijubashi Bridge, Sumida River Cruise, Sensoji Temple and Nakamise Shopping street.</p>
+<img style="border:5px double black;" src="pic/kot1.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">Day 4: Breakfast, hotel check-out, meet and transfer to airport for return flight.</p>
  <p><h2>(IMPORTANT NOTE)</font></p></h2>
 <p><font size="4">*Add P2,000/person if two persons only and P1,300/person if 3 persons only.</p>
@@ -209,6 +211,7 @@ padding:20px 0px;
 <p><font size="4">Day 2: Breakfast, free time or join optional tours.</p>
 <p><font size="4">Day 3: Breakfast, free time or join optional tours.</p>
 <p><font size="4">Day 4: Breakfast, hotel check-out, back to airport on own arrangement for return flight Important.</p>
+	<img style="border:5px double black;" src="pic/kot2.jpg" width=" 500px"height="400px"align="right">
  <p><h2>(IMPORTANT NOTE)</font></p></h2>
 <p><font size="4">*Add P2,000/person if two persons only and P1,300/person if 3 persons only.</p>
 <p><font size="4">*Rate is not valid during Holidays and Peak Season.</p>
