--- a/malaysia.html
+++ b/malaysia.html
@@ -168,6 +168,7 @@ padding:20px 0px;
 <p><font size="4">*Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 pax.</p>
 <p><font size="4">*Hotel 123 (2 star) P5699/per pax Arena Hotel (3 star) P6200/per pax.</p>
 <p><font size="4">*My Hotel (3 star) P6200/per pax Hotel Pudu (3 star) P6699/per pax.</p>
+	<img style="border:5px double black;" src="pic/rup.jpg" width=" 500px"height="400px"align="right">
 <p><h2>(INCLUSIONS)</font></p></h2>
 <p><font size="4">*3D2N Hotel Accommodation with daily breakfast.</p>
 <p><font size="4">*Round trip Airport Transfers (8:00am-10:00pm).</p>
