--- a/vietnam.html
+++ b/vietnam.html
@@ -167,6 +167,7 @@ padding:20px 0px;
 <br>
 	<left>
 <ul><p><h2><font style="border:2px double;">4D3N HO CHI MINH+ CUCHI + MY THO PACKAGE (HOTEL + TRANSFERS + TOURS)</font></p></h2>
+		<img style="border:5px double black;" src="pic/man.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays.)</p>
 <p><font size="4">Note: Minimum of 5 persons per booking.</p>
 <p><font size="4">* La Felix / Kelly Hotel (3-star) P1170/per pax.</p>
@@ -194,6 +195,7 @@ If the time permits, we can shop such as  in the boutique fashion stores ( khai 
 <p><font size="4">*Rate is valid for Filipino passport holders only.</p>
 
 <p><h2><font style="border:2px double;">4D3N Hanoi + HALONG BAY PACKAGE (HOTEL + TRANSFERS + TOURS)</font></p></h2>
+<img style="border:5px double black;" src="pic/man1.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays.)</p>
 <p><font size="4">Note: Minimum of 5 persons per booking.</p>
 <p><font size="4">D’ HANOI (3 star) P13700/per pax THIEN THAI HOTEL (4 star) P15700/per pax.</p>
@@ -219,6 +221,7 @@ If the time permits, we can shop such as  in the boutique fashion stores ( khai 
 <p><font size="4">DAY 4 : HANOI – DEPARTURE ( BREAKFAST )</p>
 <p>Transfer to the airport for flight to departure. Important Note: > Mandatory Tipping fee of P1,000/person will be collected upon booking > Rate is not valid on Holy Week and Holidays > Room rate is based on cheapest room category hotel check-in is 2:00pm and check-out is 12:00pm > Rate is valid for Filipino passport holders only.</p></p>
 <p><h2><font style="border:2px double;">3D2N HO CHI MINH PACKAGE(HOTEL + TRANSFER)</font></p></h2>
+<img style="border:5px double black;" src="pic/man2.jpg" width=" 500px"height="400px"align="right">
 <p><font size="4">Travel Period: Until May 31, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</p>
 <p><font size="4">*Ipeace Hotel / Polygon Hotel (3-star P9499/per pax.</p>
 <p><font size="4">*ICON 36 HOTEL Saigon Europe Hotel & Spa (3-star) P10199/per pax.</p>
