--- a/mywebsite15.html
+++ b/mywebsite15.html
@@ -193,15 +193,15 @@ width: 70%;
 	<div class="lotsaLinks"> 
 
 	<div class="container">
-	<a href=""target="_blank"><img style="border:5px double black;"src="pic/pro.jpg" width=" 400px"height="300px"alt=""></a>
-        <a href=""target="_blank"><img style="border:5px double black;"src="pic/pro2.jpg" width=" 340px"height="300px"alt=""></a>
-	<a href=""target="_blank"><img style="border:5px double black;"src="pic/pro3.jpg" width=" 340px"height="300px"alt=""></a>
+	<a href="https://graceairfare.github.io/mywebsite15.html"target="_blank"><img style="border:5px double black;"src="pic/pro.jpg" width=" 400px"height="300px"alt=""></a>
+        <a href="https://graceairfare.github.io/mywebsite15.html"target="_blank"><img style="border:5px double black;"src="pic/pro2.jpg" width=" 340px"height="300px"alt=""></a>
+	<a href="https://graceairfare.github.io/mywebsite15.html"target="_blank"><img style="border:5px double black;"src="pic/pro3.jpg" width=" 340px"height="300px"alt=""></a>
 	</div>
 	
 	<div class="container">
-	<a href=""target="_blank"><img style="border:5px double black;"src="pic/pro4.jpg" width=" 340px"height="300px"alt=""></a>
-        <a href=""target="_blank"><img style="border:5px double black;"src="pic/pro5.jpg" width=" 340px"height="300px"alt=""></a>
-        <a href=""target="_blank"><img style="border:5px double black;"src="pic/pro6.jpg" width=" 340px"height="300px"alt=""></a>
+	<a href="https://graceairfare.github.io/mywebsite15.html"target="_blank"><img style="border:5px double black;"src="pic/pro4.jpg" width=" 340px"height="300px"alt=""></a>
+        <a href="https://graceairfare.github.io/mywebsite15.html"target="_blank"><img style="border:5px double black;"src="pic/pro5.jpg" width=" 340px"height="300px"alt=""></a>
+        <a href="https://graceairfare.github.io/mywebsite15.html"target="_blank"><img style="border:5px double black;"src="pic/pro6.jpg" width=" 340px"height="300px"alt=""></a>
 	</div>
 	</div>
 </div>
