--- a/boracay.html
+++ b/boracay.html
@@ -206,7 +206,7 @@ padding:20px 0px;
 <p><font size="4">-Remittance: Cebuana, Palawan, LBC, etc.</p>
 <p><font size="4">-Payments will be acknowledged once I received pictures of proof of remittance or Bank fund transfer sent through messenger or email.</p>
 <p><font size="4">-Service Voucher will be provided once booking is confirmed Accommodation Address: Carmenia Residence Bulabog Street Along Bloomfield Road, Zone 5 Station 2, Boracay, Island, Phils.</p>
-<img style="border:5px double black;" src="pic/cay.jpg" width=" 500px"height="400px"align="right">
+<img style="border:5px double black;" src="pic/cay1.jpg" width=" 500px"height="400px"align="right">
 <p><h2>WE OFFER THE FOLLOWING METHODS:</font></p></h2>
 <p><font size="4">1.	(ACCOMMODATION ONLY)</p>
 <p><h2>(INCLUSIONS)</font></p></h2>
